# HurrDurrDiscordBot

./: .gitignore  README.md  VERSION  config.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
discord_bot/: __init__.py  bot.py  config.py  jokes.py  run_bot.py
discord_bot/cogs/: actions.py  bot_mixin.py  helpers.py
discord_bot/utils/: jokes.py
