[metadata]
name = HurrDurrDiscordBot
version = file: VERSION
author = Emil Rekola
author_email = emil.rekola@hotmail.com
description = Random discord bot made for giggles
url = https://github.com/rekolae/HurrDurrDiscordBot
classifiers =
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.7
include_package_data = True
install_requires =
    ConfigArgParse == 1.4
    discord.py==1.6.0
